--- a/pebblesprovisions.html/restaurantStyles.css
+++ b/pebblesprovisions.html/restaurantStyles.css
@@ -1,15 +1,24 @@
 /* restautrantStyles.css*/
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 #header{
   font-family: Permanent Marker, cursive;
   background-color: pink;
   color: ForestGreen;
 }
+
 #footer{
   font-family: Permanent Marker, cursive;
   background-color: pink;
   color: ForestGreen;
 }
+
+p{
+  color: teal;
+  font-family: georgia;
+}
+
+
 selector:link
 	a {
 	 text-decoration: none;
